force-app/main/default/objects/Sentry_Detection_Rule__mdt/Sentry_Detection_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Admin-managed detection rules for source-aware filtering and risk adjustments.</description>
    <label>Sentry Detection Rule</label>
    <pluralLabel>Sentry Detection Rules</pluralLabel>
</CustomObject>