force-app/main/default/objects/Sentry_Detection_Rule__mdt/fields/Alert_Severity__c.field-meta.xml
<CustomField>
    <fullName>Alert_Severity__c</fullName>
    <label>Alert Severity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>