force-app/main/default/objects/Sentry_Detection_Rule__mdt/fields/Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>Filter_JSON__c</fullName>
    <label>Filter JSON</label>
    <length>255</length>
    <type>TextArea</type>
</CustomField>