force-app/main/default/objects/Sentry_Detection_Rule__mdt/fields/Risk_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Adjustment__c</fullName>
    <label>Risk Adjustment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>