force-app/main/default/objects/Sentry_Detection_Rule__mdt/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>